--- a/style2.css
+++ b/style2.css
@@ -9,7 +9,7 @@ body
 p1, p2, p3, p4
     {
         font-size: 100%
-        color: rgb(223, 65, 96);
+        
     }
 
 a:visited 
@@ -41,5 +41,12 @@ p:first-letter {font-size: 200%;}
 .red:first-letter {font-size: 300%}
 
 
-
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+  }
+  p1 {text-align: center;}
     
+  myHeader {text-align: center;}
